[gd_scene load_steps=36 format=3 uid="uid://kbd6rbwq7edx"]

[ext_resource type="Texture2D" uid="uid://b6ch4khh06ahy" path="res://assets/sprites/knight.png" id="1_4yrpf"]
[ext_resource type="Script" uid="uid://dvk5rh3vk5x81" path="res://scripts/player.gd" id="1_lvm8q"]
[ext_resource type="AudioStream" uid="uid://c88jybpgyl5fe" path="res://assets/sounds/explosion.wav" id="3_fvtld"]
[ext_resource type="Script" uid="uid://b750e2mqb6v2b" path="res://scripts/shop_menu.gd" id="4_ct4mp"]
[ext_resource type="Texture2D" uid="uid://crveour5iv3d5" path="res://assets/Pixel Swords Assets 16x16/Assets/23.png" id="5_s4jxa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lg2sa"]
atlas = ExtResource("1_4yrpf")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_addas"]
atlas = ExtResource("1_4yrpf")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4u0w0"]
atlas = ExtResource("1_4yrpf")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pi6js"]
atlas = ExtResource("1_4yrpf")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_egn3c"]
atlas = ExtResource("1_4yrpf")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4thsd"]
atlas = ExtResource("1_4yrpf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6usv"]
atlas = ExtResource("1_4yrpf")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnfr8"]
atlas = ExtResource("1_4yrpf")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyyvt"]
atlas = ExtResource("1_4yrpf")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8rl7"]
atlas = ExtResource("1_4yrpf")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmjk6"]
atlas = ExtResource("1_4yrpf")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bexy"]
atlas = ExtResource("1_4yrpf")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyuj7"]
atlas = ExtResource("1_4yrpf")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lw830"]
atlas = ExtResource("1_4yrpf")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1k8p4"]
atlas = ExtResource("1_4yrpf")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4oqx"]
atlas = ExtResource("1_4yrpf")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p34rq"]
atlas = ExtResource("1_4yrpf")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d18q3"]
atlas = ExtResource("1_4yrpf")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7klxw"]
atlas = ExtResource("1_4yrpf")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4m2h0"]
atlas = ExtResource("1_4yrpf")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_70cjh"]
atlas = ExtResource("1_4yrpf")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3qcp"]
atlas = ExtResource("1_4yrpf")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqv22"]
atlas = ExtResource("1_4yrpf")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1sff"]
atlas = ExtResource("1_4yrpf")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vknk"]
atlas = ExtResource("1_4yrpf")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcbvj"]
atlas = ExtResource("1_4yrpf")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ypo6c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lg2sa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_addas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u0w0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pi6js")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egn3c")
}],
"loop": false,
"name": &"Dash",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4thsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6usv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnfr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyyvt")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8rl7")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmjk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bexy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyuj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lw830")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1k8p4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4oqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p34rq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d18q3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7klxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4m2h0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70cjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3qcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqv22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1sff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vknk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcbvj")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_n8imr"]
radius = 6.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fvtld"]
bg_color = Color(0, 0, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s4jxa"]
size = Vector2(4.24232, 14.1238)

[node name="player" type="CharacterBody2D"]
process_mode = 3
light_mask = 2
z_index = 5
position = Vector2(1, 0)
collision_layer = 2
script = ExtResource("1_lvm8q")

[node name="fireballPosition" type="Node2D" parent="."]
position = Vector2(9, 6)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ypo6c")
animation = &"Idle"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("CircleShape2D_n8imr")

[node name="Dash_timer" type="Timer" parent="."]
wait_time = 0.2

[node name="CanDashTimer" type="Timer" parent="."]
wait_time = 0.8

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_fvtld")
volume_db = -12.606

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
offset_top = 80.0
offset_right = 85.0
offset_bottom = 107.0
theme_override_styles/fill = SubResource("StyleBoxFlat_fvtld")
step = 1.0
value = 100.0
show_percentage = false

[node name="ManaLabel" type="Label" parent="CanvasLayer/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShopMenu" type="Panel" parent="CanvasLayer"]
process_mode = 3
offset_left = 137.0
offset_top = 35.0
offset_right = 1101.0
offset_bottom = 566.0
script = ExtResource("4_ct4mp")

[node name="CoinLabel" type="Label" parent="CanvasLayer/ShopMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Coins: 0"

[node name="BtnManaMax" type="Button" parent="CanvasLayer/ShopMenu"]
layout_mode = 0
offset_left = 38.0
offset_top = 80.0
offset_right = 250.0
offset_bottom = 115.0
text = "Buy Max Mana (5 coins)"

[node name="BtnFireDamage" type="Button" parent="CanvasLayer/ShopMenu"]
layout_mode = 0
offset_left = 38.0
offset_top = 220.0
offset_right = 284.0
offset_bottom = 255.0
text = "Buy Fireball damage  (15 coins)"

[node name="BtnManaRegen" type="Button" parent="CanvasLayer/ShopMenu"]
layout_mode = 0
offset_left = 38.0
offset_top = 150.0
offset_right = 248.0
offset_bottom = 181.0
text = "Buy Faster Regen (5 coins)
"

[node name="BtnJump" type="Button" parent="CanvasLayer/ShopMenu"]
layout_mode = 0
offset_left = 38.0
offset_top = 290.0
offset_right = 272.0
offset_bottom = 321.0
text = "Buy another jump (100 coins)"

[node name="BtnClose" type="Button" parent="CanvasLayer/ShopMenu"]
layout_mode = 0
offset_left = 5.0
offset_top = 489.0
offset_right = 55.0
offset_bottom = 520.0
text = "Close"

[node name="SwordArea" type="Area2D" parent="."]
monitoring = false

[node name="Sprite2D" type="Sprite2D" parent="SwordArea"]
position = Vector2(17, 6)
rotation = 0.785398
texture = ExtResource("5_s4jxa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordArea"]
position = Vector2(20, 6)
rotation = 1.5708
shape = SubResource("RectangleShape2D_s4jxa")

[connection signal="timeout" from="Dash_timer" to="." method="_on_dash_timeout"]
[connection signal="timeout" from="CanDashTimer" to="." method="_on_can_dash_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/ShopMenu/BtnManaMax" to="CanvasLayer/ShopMenu" method="_on_btn_mana_max_pressed"]
[connection signal="pressed" from="CanvasLayer/ShopMenu/BtnFireDamage" to="CanvasLayer/ShopMenu" method="_on_btn_fire_damage_pressed"]
[connection signal="pressed" from="CanvasLayer/ShopMenu/BtnManaRegen" to="CanvasLayer/ShopMenu" method="_on_btn_mana_regen_pressed"]
[connection signal="pressed" from="CanvasLayer/ShopMenu/BtnJump" to="CanvasLayer/ShopMenu" method="_on_btn_jump_pressed"]
[connection signal="pressed" from="CanvasLayer/ShopMenu/BtnClose" to="CanvasLayer/ShopMenu" method="_on_btn_close_pressed"]
[connection signal="area_entered" from="SwordArea" to="." method="_on_sword_area_area_entered"]
[connection signal="body_entered" from="SwordArea" to="." method="_on_sword_area_body_entered"]
